chore: adding product to queue